calico_versioned_docs/version-3.24/reference/calicoctl/datastore/migrate/import.mdx
---
description: Command and options for importing exported data to a kubernetes datastore.
---

import variables from '@site/calico_versioned_docs/version-3.24/variables';

# calicoctl datastore migrate import

This sections describes the `calicoctl datastore migrate import` command.

Read the [calicoctl Overview](../../overview.mdx)
for a full list of calicoctl commands.

## Display the help text for 'calicoctl datastore migrate import' command

Run `calicoctl datastore migrate import --help` to display the following help menu for the
command.

```
Usage:
  calicoctl datastore migrate import --filename=<FILENAME> [--config=<CONFIG>]

Options:
  -h --help                 Show this screen.
  -f --filename=<FILENAME>  Filename to use to import resources.  If set to
                            "-" loads from stdin.
  -c --config=<CONFIG>      Path to the file containing connection
                            configuration in YAML or JSON format.
                            [default: /etc/calico/calicoctl.cfg]

Description:
  Import the contents of the etcdv3 datastore from the file created by the
  export command.
```

### Examples

Import the contents of an etcdv3 datastore stored in a file named `etcd-migration`.

```bash
calicoctl datastore migrate import -f etcd-migration
```

### Options

```
-f --filename=<FILENAME>  Filename to use to import resources.  If set to
                            "-" loads from stdin.
```

### General options

```
-c --config=<CONFIG>     Path to the file containing connection
                         configuration in YAML or JSON format.
                         [default: /etc/calico/calicoctl.cfg]
```

## See also

- [Install calicoctl](../../../../operations/calicoctl/install.mdx)
- [Resources](../../../resources/overview.mdx) for details on all valid resources, including file format
  and schema
