calico_versioned_docs/version-3.33/reference/calicoctl/datastore/migrate/import.mdx
---
description: Reference for the calicoctl datastore migrate import command in Calico Open Source, used to import resources into a Kubernetes datastore.
---

# calicoctl datastore migrate import

This sections describes the `calicoctl datastore migrate import` command.

Read the [calicoctl Overview](../../overview.mdx)
for a full list of calicoctl commands.

## Display the help text for 'calicoctl datastore migrate import' command

Run `calicoctl datastore migrate import --help` to display the following help menu for the
command.

```
Import resources from a YAML export into a Kubernetes datastore. Takes the
output of datastore migrate export and loads it into the Kubernetes-backed
datastore.

Usage:
  calicoctl datastore migrate import [flags]

Examples:
  calicoctl datastore migrate import -f datastore.yaml

Flags:
  -c, --config string     Path to the file containing connection configuration in YAML or JSON format. (default "/etc/calico/calicoctl.cfg")
  -f, --filename string   Filename to use to import resources.
  -h, --help              help for import

Global Flags:
      --allow-version-mismatch   Allow client and cluster versions mismatch
      --context string           The name of the kubeconfig context to use
  -l, --log-level string         Set the log level (panic, fatal, error, warn, info, debug) (default "panic")
```

### Examples

Import the contents of an etcdv3 datastore stored in a file named `etcd-migration`.

```bash
calicoctl datastore migrate import -f etcd-migration
```

### Options

```
-f, --filename string   Filename to use to import resources.
```

### General options

```
-c, --config string   Path to the file containing connection configuration in YAML or JSON format. (default "/etc/calico/calicoctl.cfg")
```

## See also

- [Install calicoctl](../../../../operations/calicoctl/install.mdx)
- [Resources](../../../resources/overview.mdx) for details on all valid resources, including file format
  and schema
